<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="co.grgiral.formulario.MainActivity"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dnombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:hint="@string/pnombre"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <DatePicker
        android:id="@+id/dpfecha"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/tvfecha"
        android:layout_centerHorizontal="true"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        tools:calendarViewShown="false">

    </DatePicker>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_tel"
        android:layout_width="match_parent"
        android:layout_below="@id/dpfecha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="@dimen/dnombre">
    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:hint="@string/ptelefono"
        android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_below="@id/input_layout_tel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="@dimen/dnombre">
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:hint="@string/pemail"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_descripcion"
        android:layout_width="match_parent"
        android:layout_below="@id/input_layout_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="@dimen/dnombre">
        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:hint="@string/pdescripcion"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/absiguiente"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/siguiente"
        android:onClick="siguiente"/>

    <TextView

        android:id="@+id/tvfecha"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="Fecha de Nacimiento"
        android:textStyle="bold" />


</RelativeLayout>
